--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:theme="@style/AppTheme">
 
         <activity
-            android:name=".MainActivity"
+            android:name="de.famwienecke.doorcontrol.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
@@ -28,7 +28,7 @@
             android:name=".SettingsActivity"
             android:label="@string/settings"
             android:theme="@style/AppTheme"
-            android:parentActivityName=".MainActivity" />
+            android:parentActivityName="de.famwienecke.doorcontrol.MainActivity" />
     </application>
 
 </manifest>
